--- a/scss/minimize.scss
+++ b/scss/minimize.scss
@@ -1,11 +1,20 @@
-$bg-color: #383b32;
+$bg-color: #4d5342;
 $font-color: #afc67b;
-
+$bg-accent: #45493b;
 body{
-	font-family: Montserrat
+	font-family: Montserrat;
+	padding: 0;
+	margin: 0;
 }
 %resize{
 	text-decoration: none;
 	color: #fff;
 	list-style-type: none;
 }
+%position{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
